[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-room-phi"
version = "0.1.0"
description = "Integrated Information (Phi) computation for PLATO rooms"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-room-phi"
Repository = "https://github.com/SuperInstance/plato-room-phi"
